# generic_crm_real_estate_agents_with_AI

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  requirement_doc.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  repair_memory_embedding.py  run.py  run_test.py  seed_bulk_data.py  seed_db.py  seed_presentation_data.py  test_api_endpoints.py  test_e2e.py  test_swarm.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0553d80875eb_add_approvaldraft_model.py  2a5e0dc0cbc0_add_google_calendar_fields_to_tasks.py  3f75403bd173_add_organizationinvite_model.py  527239486320_add_api_keys_to_team_and_tutorial_state_.py  8a4f291c7d3e_mega_crm_upgrade.py  9c26928a2168_add_crm_models.py  a43b73f228d2_add_team_id_to_pipeline_models.py  b3a16737a91b_add_lead_model.py  bee52b0f9b52_add_contact_id_to_leads.py  f9a2b3c4d5e6_ai_engine_tables.py
backend/app/: main.py
backend/app/ai/: graph.py  llm.py  memory.py  prompts.py
backend/app/ai/compliance/: __init__.py  base.py  real_estate.py  registry.py  universal.py
backend/app/ai/tools/: scoring.py
backend/app/core/: config.py  db.py
backend/app/core/auth/: auth0.py  dependencies.py  management.py
backend/app/models/: __init__.py  ai.py  base.py  crm.py  pipeline.py  team.py  user.py
backend/app/routers/: admin.py  ai.py  auth.py  auth_google.py  crm.py  crm_extended.py
backend/app/schemas/: crm.py  pipeline.py  team.py  user.py
backend/app/services/: email_verification_service.py  invite_service.py  meeting_service.py  messaging_service.py  team_service.py
chatbot/: .env.example  .gitignore  README.md  prompt.ts  requirements.txt
chatbot/backend/: app.py  chat_pipeline.py  database.py  document_pipeline.py
chatbot/frontend/static/: app.js  style.css
chatbot/frontend/templates/: index.html
docs/: ai_integration_blueprint.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  react-joyride.d.ts
frontend/src/components/: ErrorBoundary.tsx  GlobalSearch.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/layouts/: DashboardLayout.tsx  Sidebar.tsx  TopBar.tsx
infra/: docker-compose.prod.yml  docker-compose.yml
(+40 files in other folders)
