[project]
name = "acufy-crm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # ─── Web Framework ─────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # ─── Database ──────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.2",

    # ─── Settings ──────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # ─── Auth ──────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",

    # ─── AI / LLM ──────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langfuse>=2.50.0",
    "openai>=1.50.0",          # used by LangChain OpenAI compat for OpenRouter

    # ─── Messaging ─────────────────────────────────────
    "twilio>=9.2.0",
    "sendgrid>=6.11.0",

    # ─── Storage ───────────────────────────────────────
    "minio>=7.2.0",

    # ─── Queue (Background jobs) ────────────────────────
    "arq>=0.26.0",
    "redis>=5.0.8",

    # ─── Email utilities ───────────────────────────────
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",

    # ─── Utilities ─────────────────────────────────────
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "cryptography>=43.0.0",
    "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N805"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
